@@ -72,7 +72,7 @@
         </dependency>
         <dependency>
             <groupId>org.divy</groupId>
-            <artifactId>bo-framework-orika-mapper-spring</artifactId>
+            <artifactId>bo-framework-modelmapper-spring</artifactId>
         </dependency>
         <dependency>
             <groupId>org.divy</groupId>
@@ -179,7 +179,6 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <argLine>
-                        --add-opens java.base/java.lang=orika.core
                         --add-opens java.base/java.lang=ALL-UNNAMED
                         --add-reads com.fasterxml.jackson.module.jaxb=ALL-UNNAMED
                         @{argLine}
