@@ -63,7 +63,7 @@
         </dependency>
         <dependency>
             <groupId>org.divy</groupId>
-            <artifactId>bo-framework-orika-mapper-spring</artifactId>
+            <artifactId>bo-framework-modelmapper-spring</artifactId>
         </dependency>
         <dependency>
             <groupId>org.divy</groupId>
@@ -143,7 +143,6 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <argLine>
-                        --add-opens java.base/java.lang=orika.core
                         --add-opens bo.framework.spring.boot.mvc.demo/org.divy.bo.demos.spring.mvc.cards=ALL-UNNAMED
                         --add-opens java.base/java.lang=ALL-UNNAMED
                         @{argLine}
